# CM2-Reference

./: .gitignore  README.md
cmake/: CMakeLists.txt
docs/: convention.md  fobj.hexpat  formatting.hpp  fst.hexpat  http.md  object.hexpat
include/cm2/: api.hpp  core.hpp  ui.hpp
include/cm2/core/: automate.hpp  game.hpp  httpclient.hpp  lab.hpp  mode.hpp
include/cm2/misc/: character.hpp
include/cm2/ui/: canvaspanel.hpp  dialog.hpp  mainmenupanel.hpp  menupanel.hpp  transferdialog.hpp
include/faktum/: api.hpp  app.hpp  core.hpp  export.hpp  faktum.hpp  graphics.hpp  import.hpp  math.hpp  mutate.hpp  object.hpp  property.hpp  resource.hpp  ui.hpp  util.hpp  win32.hpp  world.hpp
include/faktum/app/: application.hpp  editor.hpp  game.hpp
include/faktum/core/: assert.hpp  config.hpp  cpuinfo.hpp  filesystem.hpp  init.hpp  memmanager.hpp  profiledevice.hpp  profilesample.hpp  textdevice.hpp  textdevicestd.inl  timer.hpp
include/faktum/export/: code.hpp  export.hpp  fontf3f.hpp  texturedds.hpp  texturetga.hpp
include/faktum/graphics/: canvas.hpp  scene.hpp
include/faktum/import/: import.hpp
include/faktum/math/: box.hpp  capsule.hpp  line.hpp  matrix4.hpp  plane.hpp  quaternion.hpp  ray.hpp  rect.hpp  size.hpp  sphere.hpp  vector.hpp
include/faktum/mutate/: controller.hpp  keycontroller.hpp  mutable.hpp  mutator.hpp  vector3.hpp
include/faktum/object/: class.hpp  event.hpp  field.hpp  name.hpp  object.hpp  refcount.hpp  storage.hpp  struct.hpp
include/faktum/property/: array.hpp  bool.hpp  color.hpp  enum.hpp  float.hpp  int.hpp  (+7 more)
tools/: libgen.cmd
(+189 files in other folders)
